--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -25,7 +25,7 @@
     <body>
       <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
         <div class="container">
-          <a class="navbar-brand" href="./">MyYoga Timer</a>
+          <a class="navbar-brand" href="./">My Study Timer</a>
       </nav>
 
       <section>
@@ -34,124 +34,23 @@
             <div class="col-lg-8">
               <div class="p-5" style=" margin-top: 2cm;">
     <h1>Privacy Policy</h1> <p>
-                  Edge Effect Media built the MyYoga Timer app as
-                  a Freemium app. This SERVICE is provided by
-                  Edge Effect Media at no cost and is intended for use as
-                  is.
-                </p> <p>
-                  This page is used to inform visitors regarding our
-                  policies with the collection, use, and disclosure of Personal
-                  Information if anyone decided to use our Service.
-                </p> <p>
-                  If you choose to use our Service, then you agree to
-                  the collection and use of information in relation to this
-                  policy. The Personal Information that we collect is
-                  used for providing and improving the Service. We will not use or share your information with
-                  anyone except as described in this Privacy Policy.
-                </p> <p>
-                  The terms used in this Privacy Policy have the same meanings
-                  as in our Terms and Conditions, which are accessible at
-                  MyYoga Timer unless otherwise defined in this Privacy Policy.
-                </p> <p><strong>Information Collection and Use</strong></p> <p>
-                  For a better experience, while using our Service, we
-                  may require you to provide us with certain personally
-                  identifiable information, including but not limited to Email Address. The information that
-                  we request will be retained by us and used as described in this privacy policy.
-                </p> <div><p>
-                    The app does use third-party services that may collect
-                    information used to identify you.
-                  </p> <p>
-                    Link to the privacy policy of third-party service providers used
-                    by the app
-                  </p> <ul><li><a href="https://www.google.com/policies/privacy/" target="_blank" rel="noopener noreferrer">Google Play Services</a></li><!----><li><a href="https://firebase.google.com/policies/analytics" target="_blank" rel="noopener noreferrer">Google Analytics for Firebase</a></li><li><a href="https://firebase.google.com/support/privacy/" target="_blank" rel="noopener noreferrer">Firebase Crashlytics</a></li><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----></ul></div> 
-                </p> <p><strong>Apple Health & Health Connect</strong></p> <p>
-                  If chosen to allow, the App will write a yoga session as a 'Yoga Workout' after doing a yoga session in the app.
-                  You can change the permissions anytime in the settings. The App will not read any health data from these services.
-                  </p>
-                  <p><strong>Log Data</strong></p> <p>
-                  We want to inform you that whenever you
-                  use our Service, in a case of an error in the app
-                  we collect data and information (through third-party
-                  products) on your phone called Log Data. This Log Data may
-                  include information such as your device Internet Protocol
-                  (“IP”) address, device name, operating system version, the
-                  configuration of the app when utilizing our Service,
-                  the time and date of your use of the Service, and other
-                  statistics.
-                </p> <p><strong>Cookies</strong></p> <p>
-                  Cookies are files with a small amount of data that are
-                  commonly used as anonymous unique identifiers. These are sent
-                  to your browser from the websites that you visit and are
-                  stored on your device's internal memory.
-                </p> <p>
-                  This Service does not use these “cookies” explicitly. However,
-                  the app may use third-party code and libraries that use
-                  “cookies” to collect information and improve their services.
-                  You have the option to either accept or refuse these cookies
-                  and know when a cookie is being sent to your device. If you
-                  choose to refuse our cookies, you may not be able to use some
-                  portions of this Service.
-                </p> <p><strong>Service Providers</strong></p> <p>
-                  We may employ third-party companies and
-                  individuals due to the following reasons:
-                </p> <ul><li>To facilitate our Service;</li> <li>To provide the Service on our behalf;</li> <li>To perform Service-related services; or</li> <li>To assist us in analyzing how our Service is used.</li></ul> <p>
-                  We want to inform users of this Service
-                  that these third parties have access to their Personal
-                  Information. The reason is to perform the tasks assigned to
-                  them on our behalf. However, they are obligated not to
-                  disclose or use the information for any other purpose.
-                </p> <p><strong>Security</strong></p> <p>
-                  We value your trust in providing us your
-                  Personal Information, thus we are striving to use commercially
-                  acceptable means of protecting it. But remember that no method
-                  of transmission over the internet, or method of electronic
-                  storage is 100% secure and reliable, and we cannot
-                  guarantee its absolute security.
-                </p> <p><strong>Links to Other Sites</strong></p> <p>
-                  This Service may contain links to other sites. If you click on
-                  a third-party link, you will be directed to that site. Note
-                  that these external sites are not operated by us.
-                  Therefore, we strongly advise you to review the
-                  Privacy Policy of these websites. We have
-                  no control over and assume no responsibility for the content,
-                  privacy policies, or practices of any third-party sites or
-                  services.
-                </p> <p><strong>Children’s Privacy</strong></p> <div><p>
-                    These Services do not address anyone under the age of 13.
-                    We do not knowingly collect personally
-                    identifiable information from children under 13 years of age. In the case
-                    we discover that a child under 13 has provided
-                    us with personal information, we immediately
-                    delete this from our servers. If you are a parent or guardian
-                    and you are aware that your child has provided us with
-                    personal information, please contact us so that
-                    we will be able to do the necessary actions.
-                  </p> <p><strong>Data Deletion</strong></p> <p>
-                    You can delete your account and all it's data at any time within the app. See <a href="https://myyogatimerapp.github.io/deleteData">delete data page</a> for more info.
-                  </p></div> <!----> <p><strong>Changes to This Privacy Policy</strong></p> <p>
-                  We may update our Privacy Policy from
-                  time to time. Thus, you are advised to review this page
-                  periodically for any changes. We will
-                  notify you of any changes by posting the new Privacy Policy on
-                  this page.
-                </p> <p>This policy is effective as of 2022-08-09</p> <p><strong>Contact Us</strong></p> <p>
-                  If you have any questions or suggestions about our
-                  Privacy Policy, do not hesitate to contact us at myyogatimerapp@gmail.com.
-                </p> 
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-
+      <body>
+      <p>This privacy policy applies to the My Study Timer app (hereby referred to as "Application") for mobile devices that was created by Edge Effect Media (hereby referred to as "Service Provider") as a Freemium service. This service is intended for use "AS IS".</p><br><strong>Information Collection and Use</strong><p>The Application collects information when you download and use it. This information may include information such as </p><ul><li>Your device's Internet Protocol address (e.g. IP address)</li><li>The pages of the Application that you visit, the time and date of your visit, the time spent on those pages</li><li>The time spent on the Application</li><li>The operating system you use on your mobile device</li></ul><p></p><br><p>The Application does not gather precise information about the location of your mobile device.</p><div style="display: none;"><p>The Application collects your device's location, which helps the Service Provider determine your approximate geographical location and make use of in below ways:</p><ul><li>Geolocation Services: The Service Provider utilizes location data to provide features such as personalized content, relevant recommendations, and location-based services.</li><li>Analytics and Improvements: Aggregated and anonymized location data helps the Service Provider to analyze user behavior, identify trends, and improve the overall performance and functionality of the Application.</li><li>Third-Party Services: Periodically, the Service Provider may transmit anonymized location data to external services. These services assist them in enhancing the Application and optimizing their offerings.</li></ul></div><br><p>The Service Provider may use the information you provided to contact you from time to time to provide you with important information, required notices and marketing promotions.</p><br><p>For a better experience, while using the Application, the Service Provider may require you to provide us with certain personally identifiable information, including but not limited to Email. The information that the Service Provider request will be retained by them and used as described in this privacy policy.</p><br><strong>Third Party Access</strong><p>Only aggregated, anonymized data is periodically transmitted to external services to aid the Service Provider in improving the Application and their service. The Service Provider may share your information with third parties in the ways that are described in this privacy statement.</p><div><br><p>Please note that the Application utilizes third-party services that have their own Privacy Policy about handling data. Below are the links to the Privacy Policy of the third-party service providers used by the Application:</p><ul><li><a href="https://www.google.com/policies/privacy/" target="_blank" rel="noopener noreferrer">Google Play Services</a></li><!----><li><a href="https://firebase.google.com/support/privacy" target="_blank" rel="noopener noreferrer">Google Analytics for Firebase</a></li><li><a href="https://firebase.google.com/support/privacy/" target="_blank" rel="noopener noreferrer">Firebase Crashlytics</a></li><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><li><a href="https://onesignal.com/privacy_policy" target="_blank" rel="noopener noreferrer">One Signal</a></li><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><li><a href="https://www.revenuecat.com/privacy" target="_blank" rel="noopener noreferrer">RevenueCat</a></li><!----><!----><!----><!----></ul></div><br><p>The Service Provider may disclose User Provided and Automatically Collected Information:</p><ul><li>as required by law, such as to comply with a subpoena, or similar legal process;</li><li>when they believe in good faith that disclosure is necessary to protect their rights, protect your safety or the safety of others, investigate fraud, or respond to a government request;</li><li>with their trusted services providers who work on their behalf, do not have an independent use of the information we disclose to them, and have agreed to adhere to the rules set forth in this privacy statement.</li></ul><p></p><br><strong>Opt-Out Rights</strong><p>You can stop all collection of information by the Application easily by uninstalling it. You may use the standard uninstall processes as may be available as part of your mobile device or via the mobile application marketplace or network.</p><br><strong>Data Retention Policy</strong><p>The Service Provider will retain User Provided data for as long as you use the Application and for a reasonable time thereafter. If you'd like them to delete User Provided Data that you have provided via the Application, please contact them at ollietheexplorer@gmail.com and they will respond in a reasonable time.</p><br><strong>Children</strong><p>The Service Provider does not use the Application to knowingly solicit data from or market to children under the age of 13.</p><div><br><p>The Application does not address anyone under the age of 13.
+  The Service Provider does not knowingly collect personally
+  identifiable information from children under 13 years of age. In the case
+  the Service Provider discover that a child under 13 has provided
+  personal information, the Service Provider will immediately
+  delete this from their servers. If you are a parent or guardian
+  and you are aware that your child has provided us with
+  personal information, please contact the Service Provider (ollietheexplorer@gmail.com) so that
+  they will be able to take the necessary actions.</p></div><!----><br><strong>Security</strong><p>The Service Provider is concerned about safeguarding the confidentiality of your information. The Service Provider provides physical, electronic, and procedural safeguards to protect information the Service Provider processes and maintains.</p><br><strong>Changes</strong><p>This Privacy Policy may be updated from time to time for any reason. The Service Provider will notify you of any changes to the Privacy Policy by updating this page with the new Privacy Policy. You are advised to consult this Privacy Policy regularly for any changes, as continued use is deemed approval of all changes.</p><br><p>This privacy policy is effective as of 2025-03-19</p><br><strong>Your Consent</strong><p>By using the Application, you are consenting to the processing of your information as set forth in this Privacy Policy now and as amended by us.</p><br><strong>Contact Us</strong><p>If you have any questions regarding privacy while using the Application, or have questions about the practices, please contact the Service Provider via email at ollietheexplorer@gmail.com.</p>
+        
       <footer class="py-5 bg-black">
         <div class="container" style="text-align: center;">
-          <div style="background-color: white; border-radius: 1cm; width: 1.3cm; height: 1.3cm; text-align: center; margin: auto;">
-            <img style="width: 1cm; margin-top: 0.1cm;" src="img/03.png">
-          </div>
+            <img style="width: 1cm; margin-top: 0.1cm;" src="img/sutdyIcon.png">
           <p class="m-0 text-center text-white small" style="padding-top: 0.5cm;"><a style="color: white;" href="/privacy-policy">Privacy Policy</a></p>
           <p class="m-0 text-center text-white small"><a style="color: white;" href="/terms-and-conditions">Terms &amp; Conditions</a></p>
-          <p class="m-0 text-center text-white small" style="padding-top: 0.5cm">Copyright &copy; MyYogaTimer 2020</p>
+          <p class="m-0 text-center text-white small" style="padding-top: 0.5cm">Copyright &copy; MyStudyTimer 2025</p>
         </div>
         <!-- /.container -->
       </footer>
