--- a/study_delete_data.html
+++ b/study_delete_data.html
@@ -44,11 +44,9 @@
   <!-- Footer -->
   <footer class="py-4 bg-black">
     <div class="container text-center">
-      <img src="img/darkmode.PNG" style="width: 5cm; max-width: 100%;">
-      <h1 class="masthead-heading mb-0" style="display: none;">MyYoga Timer</h1>
+      <img src="img/sutdyIcon.png" style="width: 5cm; max-width: 100%;">
+      <h1 class="masthead-heading mb-0" style="display: none;">My Study Timer</h1>
       <div class="text-center pt-5" style="margin: auto;">
-            <a href="https://play.google.com/store/apps/details?id=com.EdgeEffectMedia.MyYoga&hl=en&gl=US" style="padding: 1cm"><img style="height: 55px;" class="img-fluid" src="img/google_play_badge.png" alt=""></a>
-            <a href="https://apps.apple.com/us/app/myyoga-timer/id6448668901" style="padding: 1cm"><img style="height: 60px;" class="img-fluid" src="img/ios_store_badge.svg" alt=""></a>
     </div>
     <!-- /.container -->
   </footer>
