--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="An app to time your yoga routine & create custom routines">
-  <meta name="author" content="MyYogaTimerApp">
+  <meta name="description" content="An app to time your study routine & create custom routines">
+  <meta name="author" content="MyStudyTimerApp">
 
-  <title>My Yoga Timer</title>
-  <meta name="keywords" content="app, Yoga Timer App, MyYogaTimer, custom routines, create routine, timer, yoga, downward dog, Edge Effect Media, inspired flow yoga">
+  <title>My Study Timer</title>
+  <meta name="keywords" content="app, Study Timer App, MyStudyTimer, custom routines, create routine, timer, study, pomodoro, pomodoro timer, Edge Effect Media,">
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -28,13 +28,13 @@
     <div class="masthead-content">
       <div class="container">
         <img src="img/myYOGAtimer Logo.png" style="width: 50%;">
-        <h1 class="masthead-heading mb-0" style="display: none;">MyYoga Timer</h1>
+        <h1 class="masthead-heading mb-0" style="display: none;">MyStudy Timer</h1>
         <br>
-        <h2 class="mb-0" id="yoga-anywhere"><span style="font-weight: 200;">yoga</span> <b>anywhere</b></h2>
-        <h4 class="mb-0" id="yoga-anywhere1" style="font-weight: 200;"><i>create your custom flows</i></h4>
+        <h2 class="mb-0" id="yoga-anywhere"><span style="font-weight: 200;">study</span> <b>anywhere</b></h2>
+        <h4 class="mb-0" id="yoga-anywhere1" style="font-weight: 200;"><i>time & build study sessions</i></h4>
         <div class="text-center pt-5" style="margin: auto;">
-              <a href="https://play.google.com/store/apps/details?id=com.EdgeEffectMedia.MyYoga&hl=en&gl=US" style="padding: 1cm"><img style="height: 55px;" class="img-fluid" src="img/google_play_badge.png" alt=""></a>
-              <a href="https://apps.apple.com/us/app/myyoga-timer/id6448668901" style="padding: 1cm"><img style="height: 60px;" class="img-fluid" src="img/ios_store_badge.svg" alt=""></a>
+              <a href="https://play.google.com/store/apps/details?id=com.edgeeffectmedia.studytimer&hl=en_AU" style="padding: 1cm"><img style="height: 55px;" class="img-fluid" src="img/google_play_badge.png" alt=""></a>
+              <a href="" style="padding: 1cm"><img style="height: 60px;" class="img-fluid" src="img/ios_store_badge.svg" alt=""></a>
       </div>
     </div>
    
@@ -51,12 +51,12 @@
     <div class="container" style=" padding-top: 2.5cm; padding-bottom: 2.5cm;";>
       <div class="row align-items-center">
         <div class="col-lg-6 order-lg-2 text-center">
-            <img class="img-fluid" style="width: 300px;" src="img/01_.png" alt="">
+            <img class="img-fluid" style="width: 300px;" src="img/3.png" alt="">
         </div>
         <div class="col-lg-6 order-lg-1">
           <div class="p-5">
-            <h2><span style="font-weight: 700;">PERSONALISED</span> <span style="font-weight: 200;">YOGA</span></h2>
-            <p class="pt-3 pr-5">Sore back? Tight hips? Had a long day and need to wind down? Create your own perfect flow. Choose from a library of over 240+ poses and stretches to drag and drop, then just press play! </p>
+            <h2><span style="font-weight: 700;">PERSONALISED</span> <span style="font-weight: 200;">STUDY</span></h2>
+            <p class="pt-3 pr-5">Boost your productivity and focus with My Study Timer, the ultimate AI-powered Study Timer and Pomodoro Timer! Whether you’re preparing for exams, mastering new skills, or improving your study habits, this app helps you stay on track with customizable study timers, Pomodoro sessions, and AI-generated study plans.</p>
           </div>
         </div>
       </div>
@@ -72,19 +72,19 @@
     <div class="container" style=" padding-top: 2.5cm; padding-bottom: 2.5cm;";>
       <div class="row align-items-center">
         <div class="col-lg-6 text-center">
-            <img class="img-fluid" style="width: 300px;" src="img/02_.png" alt="">
+            <img class="img-fluid" style="width: 300px;" src="img/2.png" alt="">
         </div>
         <div class="col-lg-6">
           <div class="p-5">
-            <h2><span style="font-weight: 200;">GUIDED</span> <span style="font-weight: 700;">FLOWS</span></h2>
-            <p class="pt-3 pr-5">Press play, and let the app prompt your poses - the perfect balance of structure, unobtrusive guidance, and the freedom to sink into your flow.</p>
+            <h2><span style="font-weight: 200;">AI Guided</span> <span style="font-weight: 700;">STUDY SESSIONS</span></h2>
+            <p class="pt-3 pr-5">Get personalized schedules based on your learning style. Use AI to generate totally custom flashcards and study sessions tailored to you.</p>
           </div>
         </div>
       </div>
     </div>
   </section>
 
-  <section>
+  <!-- <section>
     <div class="container">
       <div class="p-5 text-center">
         <h2><span style="font-weight: 200;">YOGA TOTALLY </span><span style="font-weight: 700;">TAILORED</span> <span style="font-weight: 200;">TO YOU</span></h2>
@@ -94,12 +94,12 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <section>
     <div class="gradient-parent" style="margin: auto; text-align: center;">
       
-            <img class="img-fluid" style="width: 700px;" src="img/quote.PNG" alt="">
+            <img class="img-fluid" style="width: 700px; border-radius: 1cm;" src="img/quote.PNG" alt="">
     </div>
   </section>
   
@@ -108,11 +108,11 @@
     <div class="container">
       <div class="row pt-5 pl-5 text-center">
         <div class="col-lg-6 pb-5"  id="paddleft">
-          <h2 style="width: 6cm; text-align: left; line-height: 1.2cm; padding-bottom: 1cm;"><span style="font-weight: 200;">WHAT COULD </span><span style="font-weight: 700;">5 MINUTES A DAY</span> <span style="font-weight: 200;">DO FOR YOU...</span></h2>
-          <p style="text-align: left;"><span style="font-weight: 300;">• Better sleep?</span></p>
-          <p style="text-align: left;"><span style="font-weight: 300;">• Less stress?</span></p>
-          <p style="text-align: left;"><span style="font-weight: 300;">• More flexibility?</span></p>
-          <p style="text-align: left;"><span style="font-weight: 300;">• More energy?</span></p>
+          <h2 style="width: 6cm; text-align: left; line-height: 1.2cm; padding-bottom: 1cm;"><span style="font-weight: 200;">WHAT COULD </span><span style="font-weight: 700;">YOU DO WITH MORE FOCUS..</span> <span style="font-weight: 200;"></span></h2>
+          <p style="text-align: left;"><span style="font-weight: 300;">• Better Grades</span></p>
+          <p style="text-align: left;"><span style="font-weight: 300;">• Work Smater</span></p>
+          <p style="text-align: left;"><span style="font-weight: 300;">• Understand More</span></p>
+          <p style="text-align: left;"><span style="font-weight: 300;">• Reach goals quicker</span></p>
 
         </div>
         <div id="handimage" class="col-lg-6 text-center pt-3" style="position: relative;">
@@ -124,10 +124,10 @@
   
   <section>
     <div class="gradient-parent" style="margin: auto; text-align: center; height: 16.5cm;">
-      <h2 style="padding-top: 1cm; color: white;"><span style="font-weight: 200;">Yoga is for </span><span style="font-weight: 700;">every</span> <span style="font-weight: 200;">body.</span></h2>
+      <h2 style="padding-top: 1cm; color: white;"><span style="font-weight: 200;">Study is for </span><span style="font-weight: 700;">every</span> <span style="font-weight: 200;">mind.</span></h2>
       <h2 style="color: white;"><span style="font-weight: 200;">Make it your own.</span></h2>
       <div style="position: relative;">
-        <img class="img-fluid pt-5" style="width: 300px;" src="img/yogaPoses.PNG" alt="">
+        <img class="img-fluid pt-5" style="width: 300px;" src="img/7.PNG" alt="">
       </div>
     </div>
   </section>
@@ -138,11 +138,12 @@
   <!-- Footer -->
   <footer class="py-4 bg-black">
     <div class="container text-center">
-      <img src="img/darkmode.PNG" style="width: 5cm; max-width: 100%;">
-      <h1 class="masthead-heading mb-0" style="display: none;">MyYoga Timer</h1>
+      <img src="img/myYOGAtimer Logo.png" style="width: 5cm; max-width: 100%;">
+      <h1 class="masthead-heading mb-0" style="display: none;">MyStudy Timer</h1>
+      <p style="color: white;">Support Contact: ollietheexplorer@gmail.com</p>
       <div class="text-center pt-5" style="margin: auto;">
-            <a href="https://play.google.com/store/apps/details?id=com.EdgeEffectMedia.MyYoga&hl=en&gl=US" style="padding: 1cm"><img style="height: 55px;" class="img-fluid" src="img/google_play_badge.png" alt=""></a>
-            <a href="https://apps.apple.com/us/app/myyoga-timer/id6448668901" style="padding: 1cm"><img style="height: 60px;" class="img-fluid" src="img/ios_store_badge.svg" alt=""></a>
+            <a href="https://play.google.com/store/apps/details?id=com.edgeeffectmedia.studytimer&hl=en_AU" style="padding: 1cm"><img style="height: 55px;" class="img-fluid" src="img/google_play_badge.png" alt=""></a>
+            <a href="" style="padding: 1cm"><img style="height: 60px;" class="img-fluid" src="img/ios_store_badge.svg" alt=""></a>
     </div>
     <!-- /.container -->
   </footer>
