--- a/study_delete_data.html
+++ b/study_delete_data.html
@@ -28,7 +28,7 @@
     <div class="gradient-parent" style="margin: auto; text-align: center; height: 25.5cm;">
       <p>Delete your data with this link on the device you have the app installed:</p>
       <div class="text-center" style="margin: auto; padding-bottom: 1cm;">
-            <a href="https://myflows.yoga/link/flow/deleteData" style="padding: 1cm">Delete Data</a>
+            <a href="https://myflows.yoga/link/flow/deleteData" style="padding: 1cm; color: white">Delete Data</a>
     </div>
     <div>
         You'll be taken to the profile page of the app and at the bottom there is a button to delete your data.
