--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
       <h2 style="padding-top: 1cm; color: white;"><span style="font-weight: 200;">Study is for </span><span style="font-weight: 700;">every</span> <span style="font-weight: 200;">mind.</span></h2>
       <h2 style="color: white;"><span style="font-weight: 200;">Make it your own.</span></h2>
       <div style="position: relative;">
-        <img class="img-fluid pt-5" style="width: 300px;" src="img/7.PNG" alt="">
+        <img class="img-fluid pt-5" style="width: 300px;" src="img/bottomImage.png" alt="">
       </div>
     </div>
   </section>
