--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <header class="masthead text-center text-white">
     <div class="masthead-content">
       <div class="container">
-        <img src="img/myYOGAtimer Logo.png" style="width: 50%;">
+        <img src="img/logo.png" style="width: 50%;">
         <h1 class="masthead-heading mb-0" style="display: none;">MyStudy Timer</h1>
         <br>
         <h2 class="mb-0" id="yoga-anywhere"><span style="font-weight: 200;">study</span> <b>anywhere</b></h2>
