--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
   <!-- Footer -->
   <footer class="py-4 bg-black">
     <div class="container text-center">
-      <img src="img/myYOGAtimer Logo.png" style="width: 5cm; max-width: 100%;">
+      <img src="img/logo.png" style="width: 5cm; max-width: 100%;">
       <h1 class="masthead-heading mb-0" style="display: none;">MyStudy Timer</h1>
       <p style="color: white;">Support Contact: ollietheexplorer@gmail.com</p>
       <div class="text-center pt-5" style="margin: auto;">
