--- a/links.html
+++ b/links.html
@@ -33,7 +33,7 @@
   <header class="masthead text-center text-white" style="padding-top: 1cm;">
     <div class="masthead-content">
       <div class="container">
-        <img src="img/myYOGAtimer Logo.png" style="width: 80%;">
+        <img src="img/logo.png" style="width: 80%;">
         <p><a style="font-size: 1.5em; width: 100%;" href="https://myyogatimer.app" class="btn btn-primary btn-xl rounded-pill mt-5">MAIN SITE</a></p>
         <p><a style="font-size: 1.5em; width: 100%;" href="http://eepurl.com/g8igXz" class="btn btn-secondary btn-xl rounded-pill mt-5">SIGNUP TO MAILING LIST</a></p>
         <p><a style="font-size: 1.5em; width: 100%;" href="https://myyogatimer.app/blog/motivation-over-willpower" class="btn btn-primary btn-xl rounded-pill mt-5">LATEST BLOG POST: Motivation over Willpower</a></p>
