--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
         </div>
         <div id="handimage" class="col-lg-6 text-center pt-3" style="position: relative;">
-              <img class="img-fluid" style="position:absolute; bottom:0; left: 0; width: 700px;" src="img/hand_looking_at_app.PNG" alt="">
+              <img class="img-fluid" style="position:absolute; bottom:0; left: 0; width: 700px;" src="img/hand.png" alt="">
         </div>
       </div>
     </div>
