added apple link

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <h4 class="mb-0" id="yoga-anywhere1" style="font-weight: 200;"><i>time & build study sessions</i></h4>
         <div class="text-center pt-5" style="margin: auto;">
               <a href="https://play.google.com/store/apps/details?id=com.edgeeffectmedia.studytimer&hl=en_AU" style="padding: 1cm"><img style="height: 55px;" class="img-fluid" src="img/google_play_badge.png" alt=""></a>
-              <a href="" style="padding: 1cm"><img style="height: 60px;" class="img-fluid" src="img/ios_store_badge.svg" alt=""></a>
+              <a href="https://apps.apple.com/us/app/my-study-timer-pomodoro/id6744005752" style="padding: 1cm"><img style="height: 60px;" class="img-fluid" src="img/ios_store_badge.svg" alt=""></a>
       </div>
     </div>
    
@@ -143,7 +143,7 @@
       <p style="color: white;">Support Contact: ollietheexplorer@gmail.com</p>
       <div class="text-center pt-5" style="margin: auto;">
             <a href="https://play.google.com/store/apps/details?id=com.edgeeffectmedia.studytimer&hl=en_AU" style="padding: 1cm"><img style="height: 55px;" class="img-fluid" src="img/google_play_badge.png" alt=""></a>
-            <a href="" style="padding: 1cm"><img style="height: 60px;" class="img-fluid" src="img/ios_store_badge.svg" alt=""></a>
+            <a href="https://apps.apple.com/us/app/my-study-timer-pomodoro/id6744005752" style="padding: 1cm"><img style="height: 60px;" class="img-fluid" src="img/ios_store_badge.svg" alt=""></a>
     </div>
     <!-- /.container -->
   </footer>
